[project]
name = "Voronout"
version = "0.0.1"
authors = [
  { name="Javas Shankar", email="javasshankar@gmail.com" },
]
description = "Translating scipy.spatial's Voronoi diagrams into a set of cells bounded by the containing box."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = ""
Issues = ""